sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:11: error: illegal start of simple expression
for(i<- getNombreValeurs()-2 to 0 by -1))
                                        ^